# shinki-zemi-asr

./: .env.example  .gitignore  README.md  pyproject.toml
src/shinki_zemi_asr/: asr.py  config.py  main.py
src/shinki_zemi_asr/database/: csv_operations.py
src/shinki_zemi_asr/models/: schemas.py
src/shinki_zemi_asr/routes/: main_router.py
src/shinki_zemi_asr/services/: transcriber.py
src/shinki_zemi_asr/templates/: index.html
src/shinki_zemi_asr/utils/: file_operations.py  output_to_wiki.py
