[project]
name = "shinki-zemi-asr"
version = "0.1.0"
description = ""
authors = [
    {name = "Ouk Outdam",email = "outdam.ouk103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "shinki_zemi_asr", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
